--- a/.jshintrc
+++ b/.jshintrc
@@ -16,5 +16,5 @@
     "node":       true,         // This option defines globals available when your code is running inside of the Node runtime environment.
     "worker":     true,         // This option defines globals available when your code is running inside of a Web Worker.
     "expr":       true,         // This option suppresses warnings about the use of expressions where normally you would expect to see assignments or function calls.
-    "globals":    ["jSponsor"]
+    "globals":    ["jSponsor", "Promise"]
 }
